@@ -1,3 +1,4 @@
+  Allow setting group on client.cfg
 20140113 v1.6.0
   Add configuration for puppet agent plugin
 20130911 v1.5.0
